# ALFS

alfs/: Makefile  alfs.c  build.h
alfs-POC/client-server/: client.c  server.c
alfs-POC/doc/: command-list
alfs-POC/src/: Makefile  alfs.c  alfsd.c  parser.c  parser.cpp  server.c
alfs-POC/trunk/: moo.xml  url.h
alfs-POC/trunk/libalfs/: devel.h  option.c
alfs-POC/trunk/syntax/: diyl.c
alfs/docs/: README
alfs/libalfs/: Makefile  alfs.c  alfs.h  devel.h  parse.c  parse.h
alfs/output/: ass_out.c
alfs/syntax/: Makefile  ass.c  blfs.c  diyl.c  nalfs.c
alfs/test/: Makefile  tst.h
alfs/trunk/: Makefile  alfs.c  alfs.h  alfscl.c  alfsd.c  alfsd.h  packages.xml  plugin.c  test.c
alfs/trunk/docs/: README  comm-proto.txt
alfs/trunk/libalfs/: Makefile  parse.c  parse.h  repl.c
alfs/trunk/libcomm/: Makefile  libcomm.c  libcomm.h  remote.c  remote.h  secret.h
archive/DTD/trunk/: ALFS.dtd
archive/alfs-POC/src/: alfsd.c  parser.cpp
archive/nALFS/nALFS/tags/1.1.8/: Makefile.in  Rules.mak.in  configure.in
archive/nALFS/nALFS/tags/1.1.8/docs/syntax_doc/: index.xml
archive/nALFS/nALFS/tags/1.1.8/docs/syntax_doc/alfs_dtd/: elem_alfs.xml  elem_archive.xml  elem_base.xml  elem_configure.xml  elem_description.xml  elem_digest.xml  elem_if.xml  elem_list.xml  elem_mkdir.xml  elem_option.xml  elem_package.xml  elem_packageinfo.xml  elem_param.xml  elem_patch.xml  elem_replace.xml  elem_requires.xml  elem_search_replace.xml  elem_source.xml  elem_textdump.xml  elem_unpack.xml  elem_url.xml  elem_variable.xml  elem_version.xml
archive/nALFS/nALFS/tags/1.1.8/docs/syntax_doc/preface/: acknowledgements.xml  contactinfo.xml
archive/nALFS/nALFS/tags/1.1.8/src/: backend.c  comm.h  config.h  options.c  win.h
archive/nALFS/nALFS/tags/1.1.8/src/handlers/: build.c  configure.c  copy.c  link.c  mkdir.c  new-copy.c  new-make.c  new-stage.c  new-unpack.c  postbuild.c  prebuild.c
archive/nALFS/nALFS/tags/1.1.8/src/lib/: load_url.c
archive/old-alfs-POC/trunk/: Makefile  build.h  plugin.c  url.c
branches/branch-1_2/nALFS/: CHANGES  README  bootstrap  bootstrap.configure
branches/v1_2_0_rc-branch/nALFS/: README  bootstrap.configure
dev/concept/moongoo/: LICENSE  Makefile  README  alfs.c  alfs.h  ass.c  ass.h  book.c  book.h  build.c  build.h  devel.c  inc.mak  main.c  main.h  moo.xml  moongoo.c  moongoo.h  nalfs.c  nalfs.h  packages.xml  plugin.c  plugin.h  repl.c  repl.h  syn.c  syn.h  url.c  url.h  util.c  util.h
docs/syntax_doc/trunk/: index.xml
nALFS/hackers_guide/trunk/: Makefile  index.xml
nALFS/nALFS/trunk/: CHANGES  README  bootstrap  bootstrap.configure
nALFS/users_guide/trunk/: index.xml
old-alfs-POC/alfs-POC/trunk/: alfscl.c  alfsd.c  build.c  plugin.h
old-alfs-POC/trunk/libalfs/: Makefile  alfs.c
old-alfs-POC/trunk/syntax/: sample.c
profiles/BLFS/trunk/: BLFS.xml  README  README.download  runit.sh  system.ent  wget.blfs
profiles/HLFS/trunk/: checkit.sh  e2fs.sh  runit.sh
profiles/LFS/trunk/: LFS.xml  README  runit.sh
tags/BLFS-before-xincludes/: checkit.sh
tags/rtag/nALFS/: nALFS
trunk/: README  TODO  syntax.txt
trunk/DTD/: ALFS-3.1.dtd  ALFS-CVS.dtd  ALFS-SVN.dtd
trunk/docs/: bookinfo.xml  changelog.xml  contactinfo.xml  index.xml  legalnotice.xml
trunk/halfling/: LICENSE  configure.ac
trunk/nALFS/: CREDITS  README  Rules.mak.in  bootstrap  bootstrap.Makefile  bootstrap.configure  bootstrap.libtool  bootstrap.option-list  configure.ac  configure.in
(+5143 files in other folders)
